--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "blade-ui-kit/blade-icons": "^1.8",
         "codeat3/blade-bytesize-icons": "^1.6",
         "davidhsianturi/blade-bootstrap-icons": "^2.1",
+        "gehrisandro/tailwind-merge-laravel": "^1.3",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
