--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "socialiteproviders/zoho": "^4.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
